# INDIE-STUDIO

./: CMakeLists.txt
assets/: bomb.iqm  bomb_anim.iqm  flame.iqm  flame_anim.iqm  player.iqm  player_anim.iqm
include/: raylib.hpp
include/assets_manager/: assets_manager.hpp
include/background_manager/: background_manager_obj.hpp  background_manager_obj.hpp~
include/collision_manager/: collision_obj.hpp  collision_obj.hpp~
include/components/: animation.hpp  button.hpp  components.hpp  hit_box.hpp  power_up.hpp  speed.hpp
include/event_manager/: event_manager.hpp
include/game_object/game/: blocks_obj.hpp  bomb_obj.hpp  brick_obj.hpp  flame_obj.hpp  game_object.hpp  ground_obj.hpp  pnj_manager.hpp  wall_obj.hpp
include/game_object/game/power_ups_obj/: bomb_up_obj.hpp  fire_up_obj.hpp  power_ups_obj.hpp  speed_up_obj.hpp  wall_pass_obj.hpp
include/game_object/menu/: font_game.hpp  general_settings_obj.hpp  how_to_play_obj.hpp  main_menu_obj.hpp  pause_game_obj.hpp  pre_game_settings_obj.hpp
include/objects/: my_audio_stream.hpp  my_bounding_box.hpp  my_camera.hpp  my_color.hpp  my_font.hpp  my_glyph_info.hpp  my_image.hpp  my_material.hpp  my_material_map.hpp  my_mesh.hpp  my_mesh.hpp~  my_model.hpp  my_model_animation.hpp  my_music.hpp  my_ray.hpp  my_ray_collision.hpp  my_rectangle.hpp  my_render_texture2d.hpp  my_shader.hpp  my_sound.hpp  my_texture2d.hpp  my_vector2.hpp  my_vector3.hpp  my_vector4.hpp  my_wave.hpp
include/sound_manager/: sound_manager_obj.hpp  sound_manager_obj.hpp~
src/: main.cpp
src/asset_manager/: asset_manager.cpp
src/background_manager/: background_manager.cpp
src/collision_manager/: collision_manager.cpp  collision_manager.cpp~
src/components/: animation.cpp  button.cpp  hit_box.cpp  power_up.cpp  speed.cpp
src/event_manager/: event_manager.cpp
src/game_objects/game/: block_obj.cpp  bomb.cpp  brick_obj.cpp  flame.cpp  game_object.cpp  ground_obj.cpp  pnj_manager.cpp  wall_obj.cpp
src/game_objects/game/power_ups/: bomb_up.cpp  fire_up.cpp  power_ups.cpp  speed_up.cpp  wall_pass.cpp
src/game_objects/menu/: font_game.cpp  general_settings.cpp  how_to_play.cpp  main_menu.cpp  pause_game.cpp  pre_game_settings.cpp
src/raylib/: ModelAnimation.cpp  Ray.cpp  audiostream.cpp  boundingbox.cpp  camera.cpp  color.cpp  engine.cpp  font.cpp  glyph_info.cpp  image.cpp  material.cpp  materialmap.cpp  mesh.cpp  mesh.cpp~  model.cpp  music.cpp  raycollision.cpp  rectangle.cpp  render_texture.cpp  shader.cpp  sound.cpp  texture.cpp  vector2.cpp  vector3.cpp  vector4.cpp  wave.cpp
src/sound_manager/: sound_manager.cpp
